tests/snapshots/ptx_golden_tests__predicate_filter_and_or.snap
---
source: tests/ptx_golden_tests.rs
---
.version 7.5
.target sm_70
.address_size 64

.visible .entry bolt_test_kernel(
	.param .u64 .ptr .global .align 16 bolt_test_kernel_param_0,
	.param .u64 .ptr .global .align 16 bolt_test_kernel_param_1,
	.param .u64 .ptr .global .align 16 bolt_test_kernel_param_2,
	.param .u64 .ptr .global .align 16 bolt_test_kernel_param_3,
	.param .u32 bolt_test_kernel_param_4_n_rows
)
{
	.reg .pred %p<5>;
	.reg .b32 %r<13>;
	.reg .b64 %rl<6>;
	.reg .b64 %rd<12>;
	mov.u32 %r{0}, %ctaid.x;
	mov.u32 %r{1}, %ntid.x;
	mov.u32 %r{2}, %tid.x;
	mad.lo.s32 %r{3}, %r{0}, %r{1}, %r{2};
	ld.param.u32 %r{4}, [bolt_test_kernel_param_4_n_rows];
	setp.ge.u32 %p{0}, %r{3}, %r{4};
	@%p{0} bra DONE;
	ld.param.u64 %rd{0}, [bolt_test_kernel_param_0];
	cvta.to.global.u64 %rd{0}, %rd{0};
	ld.param.u64 %rd{1}, [bolt_test_kernel_param_1];
	cvta.to.global.u64 %rd{1}, %rd{1};
	ld.param.u64 %rd{2}, [bolt_test_kernel_param_2];
	cvta.to.global.u64 %rd{2}, %rd{2};
	ld.param.u64 %rd{3}, [bolt_test_kernel_param_3];
	cvta.to.global.u64 %rd{3}, %rd{3};
	mul.wide.u32 %rd{4}, %r{3}, 4;
	add.s64 %rd{5}, %rd{0}, %rd{4};
	ld.global.nc.s32 %r{5}, [%rd{5}];
	mov.s64 %rl{0}, 0x0000000000000001;
	cvt.s64.s32 %rl{1}, %r{5};
	setp.eq.s64 %p{1}, %rl{1}, %rl{0};
	selp.s32 %r{6}, 1, 0, %p{1};
	mul.wide.u32 %rd{6}, %r{3}, 4;
	add.s64 %rd{7}, %rd{1}, %rd{6};
	ld.global.nc.s32 %r{7}, [%rd{7}];
	mov.s64 %rl{2}, 0x0000000000000002;
	cvt.s64.s32 %rl{3}, %r{7};
	setp.eq.s64 %p{2}, %rl{3}, %rl{2};
	selp.s32 %r{8}, 1, 0, %p{2};
	mul.wide.u32 %rd{8}, %r{3}, 4;
	add.s64 %rd{9}, %rd{2}, %rd{8};
	ld.global.nc.s32 %r{9}, [%rd{9}];
	mov.s64 %rl{4}, 0x0000000000000003;
	cvt.s64.s32 %rl{5}, %r{9};
	setp.eq.s64 %p{3}, %rl{5}, %rl{4};
	selp.s32 %r{10}, 1, 0, %p{3};
	or.b32 %r{11}, %r{8}, %r{10};
	and.b32 %r{12}, %r{6}, %r{11};
	setp.eq.s32 %p{4}, %r{12}, 0;
	@%p{4} bra DONE;
	mul.wide.u32 %rd{10}, %r{3}, 4;
	add.s64 %rd{11}, %rd{3}, %rd{10};
	st.global.s32 [%rd{11}], %r{5};
DONE:
	ret;
}
